chỉnh màu trước khi update từ ngữ theo anh Linh

--- a/src/index.html
+++ b/src/index.html
@@ -249,28 +249,28 @@
         }
 
         .checkbox-item:hover {
-            border-color: #27ae60;
-            background: #f8fff8;
+            border-color: #aff378;
+            background: #f0ffe0;
             transform: translateY(-2px);
-            box-shadow: 0 5px 15px rgba(39, 174, 96, 0.2);
+            box-shadow: 0 5px 15px rgba(175, 243, 120, 0.3);
         }
 
         .checkbox-item input[type="checkbox"] {
             width: 20px;
             height: 20px;
             margin: 0;
-            accent-color: #27ae60;
+            accent-color: #5fdefe;
         }
 
         .checkbox-item input[type="checkbox"]:checked + label {
-            color: #27ae60;
+            color: #aff378;
             font-weight: 600;
         }
 
         .checkbox-item:has(input[type="checkbox"]:checked) {
-            border-color: #27ae60;
-            background: linear-gradient(135deg, #f8fff8, #e8f5e8);
-            box-shadow: 0 5px 20px rgba(39, 174, 96, 0.3);
+            border-color: #aff378;
+            background: linear-gradient(135deg, #f0ffe0, #e8ffd0);
+            box-shadow: 0 5px 20px rgba(196, 251, 151, 0.4);
         }
 
         .checkbox-item label {
@@ -426,7 +426,7 @@
         }
 
         .result-header {
-            background: linear-gradient(135deg, #8e44ad, #9b59b6);
+            background: linear-gradient(180deg, #500A26 0%, #7C2059 25%, #663789 50%, #3530B1 75%, #052089 100%);
             color: white;
             padding: 25px;
             text-align: center;
