--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Công Cụ Tính Giá Bán Shopee</title>
+        <title>Công cụ cân đối giá bán shopee</title>
         <link
             href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
             rel="stylesheet">
@@ -468,7 +468,8 @@
         }
 
         .result-header {
-            background: linear-gradient(180deg, #500A26 0%, #7C2059 25%, #663789 50%, #3530B1 75%, #052089 100%);
+            /*background: linear-gradient(180deg, #500A26 0%, #7C2059 25%, #663789 50%, #3530B1 75%, #052089 100%);*/
+            background: #172A52;
             color: white;
             padding: 25px;
             text-align: center;
@@ -908,7 +909,7 @@
                     <div class="logo-container">
                         <img src="./assets/images/logos.png" alt="TUKI GROUP Logo" class="header-logo">
                         <div class="logo-text">
-                            <h1>Công Cụ Tính Giá Bán Shopee 2025</h1>
+                            <h1>Công cụ cân đối giá bán shopee</h1>
                             <p>Tính toán chi phí và lợi nhuận bán hàng trên Shopee một cách chính xác</p>
                         </div>
                     </div>
