Điều chỉnh khi chọn cả 2 dịch vụ Xtra thì tính theo mức phí cao hơn

--- a/src/index.html
+++ b/src/index.html
@@ -910,7 +910,7 @@
                         <img src="./assets/images/logos.png" alt="TUKI GROUP Logo" class="header-logo">
                         <div class="logo-text">
                             <h1>Công cụ cân đối giá bán shopee</h1>
-                            <p>Tính toán chi phí và lợi nhuận bán hàng trên Shopee một cách chính xác</p>
+                            <p>Tính toán chi phí và lợi nhuận bán hàng trên Shopee một cách chính xác \n với dữ liệu cập nhật liên tục, hỗ trợ bạn ra quyết định kịp thời</p>
                         </div>
                     </div>
                 </div>
@@ -2202,7 +2202,7 @@ function formatInputPercentage(input) {
             const paymentFeePercent = 0.0491; // 4.91%
             const shippingServiceFeePercent = 0.0589; // 5.89%
             const contentXtraFeePercent = contentXtraChecked ? 0.0259 : 0; // 2.59%
-            const voucherXtraFeePercent = voucherXtraChecked ? 0.0196 : 0; // 1.96%
+            const voucherXtraFeePercent = voucherXtraChecked ? 0.03 : 0; // 3%
 
             // Shipping cost
             let shippingCost = 0;
