--- a/public/index.html
+++ b/public/index.html
@@ -74,6 +74,8 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>Tuki HCM - Công cụ tính giá Shopee | Shopee Price Calculator</title>
+    <!-- Google reCAPTCHA v3 -->
+    <script src="https://www.google.com/recaptcha/api.js?render=%6Lf7uaArAAAAADroQyHyNX_8Aiaw0KT-R4VI2lxP%"></script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
